# Lab2-Assessment

./: CMakeLists.txt  README.md
.github/workflows/: autograding.yml
include/: student_code.h
src/: student_code.cpp
tests/: CMakeLists.txt  test_student_code.cpp
